packages/player/assets/cc/style.scss
.media-control-skin-1 {
  .media-control-cc {
    button.media-control-button {
      display: flex;
      justify-content: center;
      padding: 0;
      align-items: center;
      vertical-align: top;

      &:hover {
        color: white;
      }
    }

    ul {
      li {
        text-align: center;

        a {
          height: 30px;
          padding: 5px 10px;
          color: #fffffe;

          &:hover {
            background-color: rgb(0 0 0 / 40%);
          }
        }

        &.current a {
          background-color: rgb(0 0 0 / 40%);
        }

        &:first-child {
          a {
            border-bottom-left-radius: 4px;
            border-bottom-right-radius: 4px;
          }
        }

        &:last-child {
          a {
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
          }
        }
      }
    }
  }

  .media-control-cc {
    position: relative;
    order: 85;
  }
}

::cue {
  visibility: hidden !important;
  font-size: 0 !important;
}

.ios-fullscreen::cue {
  visibility: visible !important;
  font-size: 1em !important;
}

.container {
  .gplayer-cc-line {
    position: absolute;
    bottom: calc(var(--bottom-panel) + 5px);
    width: 100%;
    transition: transform 0.3s ease-out;

    &.media-control-cc-pulled {
      transform: translateY(var(--bottom-panel));
    }

    p {
      width: auto;
      background-color: rgb(0 0 0 / 40%);
      color: white;
      display: inline-block;
    }
  }
}

